<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/add_new_post"
        android:id="@+id/nav_post"
        android:icon="@drawable/add_post">
    </item>
    <item
        android:title="@string/profile"
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile_icon">
    </item>
    <item
        android:title="@string/home"
        android:id="@+id/nav_home"
        android:icon="@drawable/home">
    </item>
    <item
        android:title="@string/friends"
        android:id="@+id/nav_friends"
        android:icon="@drawable/friends">
    </item>
    <item
        android:id="@+id/nav_find_friends"
        android:icon="@drawable/find_people"
        android:title="@string/find_friends" />
</menu>