<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_background_pink"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="46dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/giveandtake_logo"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="450dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:autofillHints=""
        android:padding="10dp"
        android:drawableLeft="@drawable/email"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="385dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:autofillHints=""
        android:padding="10dp"
        android:drawableLeft="@drawable/password"/>

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="317dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        android:padding="10dp"
        android:drawableLeft="@drawable/password"/>

    <Button
        android:id="@+id/register_create_account"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="227dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>