<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreateAccountFragment"
    android:background="@drawable/light_purpel_background">

    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="46dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/giveandtake_logo"
        tools:ignore="ImageContrastCheck" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="12dp"
            android:hint="Name"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/email"/>

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/email"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints=""
            android:drawableLeft="@drawable/password"/>

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="12dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="#616161"
            android:drawableLeft="@drawable/password"/>
    </LinearLayout>

    <Button
        android:id="@+id/register_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_above="@id/loginTv"
        android:layout_marginBottom="20dp"/>


    <TextView
        android:id="@+id/loginTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:text="Back to Login"
        android:textStyle="bold"
        android:textColor="@color/black"/>




</RelativeLayout>