<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.auth.LoginFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/light_purpel_background">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="46dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/giveandtake_logo"
        tools:ignore="ImageContrastCheck" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/ll1">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/email"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints=""
            android:drawableLeft="@drawable/password"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progressBar"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ll1"
        android:visibility="gone"
        android:layout_above="@+id/login_signin_btn"/>

    <Button
        android:id="@+id/login_signin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_above="@id/signup_tv"
        android:layout_marginBottom="100dp"/>


    <TextView
        android:id="@+id/signup_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:text="Don't have an account? Click here to create"
        android:textStyle="bold"
        android:textColor="@color/black"/>
</RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>