<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_background_pink"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="46dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/giveandtake_logo"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="450dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:autofillHints=""
        android:padding="10dp"
        android:drawableLeft="@drawable/email"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="350dp"
        android:autofillHints=""
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/login_account"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="273dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="#BA2828"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/register_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="183dp"
        android:paddingTop="10dp"
        android:text="Don't have an account? Click here to create "
        android:textAlignment="center"
        android:textColor="#706767"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="136dp"
        android:text="or login with"
        android:textAlignment="center"
        android:textColor="#706767"
        android:textSize="16sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/register_account_link">


    </LinearLayout>

    <ImageView
        android:id="@+id/facebook_signin_btn"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="278dp"
        android:layout_marginBottom="81dp"
        android:src="@drawable/facebook"></ImageView>

    <ImageView
        android:id="@+id/twitter_signin_btn"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="76dp"
        android:src="@drawable/twitter"></ImageView>

    <ImageView
        android:id="@+id/google_signin_btn"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="83dp"
        android:src="@drawable/google"></ImageView>
</RelativeLayout>